--- a/apps/style-guide/tsconfig.json
+++ b/apps/style-guide/tsconfig.json
@@ -8,5 +8,5 @@
 		},
 		"composite": true
 	},
-	"include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
+	"include": ["**/*.ts", "**/*.d.ts", "**/*.tsx", "**/*.vue"]
 }
