--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "beaver-admin",
+  "name": "digital-beaver-admin",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev:docs": "pnpm --filter @digital-beaver/docs dev",
-    "dev:playground": "pnpm --filter playground dev",
-    "build": "pnpm --filter @digital-beaver/admin-ui build",
+    "dev:style-guide": "pnpm --filter @digital-beaver-admin/style-guide dev",
+    "dev": "pnpm --filter @digital-beaver-admin/admin-ui dev",
+    "build": "pnpm --filter @digital-beaver-admin/admin-ui build",
     "lint": "eslint ."
   },
   "devDependencies": {
-    "@digital-beaver/eslint-config": "workspace:*",
+    "@digital-beaver-admin/eslint-config": "workspace:*",
     "eslint": "^9.21.0",
     "prettier": "^3.5.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3"
   }
