--- a/packages/admin-ui/package.json
+++ b/packages/admin-ui/package.json
@@ -1,23 +1,43 @@
 {
-  "name": "@digital-beaver/admin-ui",
-  "version": "0.1.0",
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
-  "scripts": {
-    "build": "vite build"
-  },
-  "devDependencies": {
-    "@digital-beaver/eslint-config": "workspace:*",
-    "@vitejs/plugin-vue": "^5.2.1",
-    "eslint": "^9.0.0",
-    "vite": "^6.2.0",
-    "vite-plugin-dts": "^4.5.0"
-  },
-  "dependencies": {
-    "@vueuse/core": "^12.7.0",
-    "lucide-vue-next": "^0.476.0",
-    "tailwindcss": "^3.4.17",
-    "vue": "^3.5.13"
-  }
+	"name": "@digital-beaver-admin/admin-ui",
+	"version": "0.1.0",
+	"main": "dist/index.cjs.js",
+	"module": "index.es.js",
+	"types": "dist/index.d.ts",
+	"exports": {
+		".": {
+			"types": "./dist/index.d.ts",
+			"require": "./dist/index.cjs.js",
+			"import": "./dist/index.es.js"
+		},
+		"./dist/admin-ui.css": "./dist/admin-ui.css"
+	},
+	"scripts": {
+		"build": "vite build",
+		"dev": "vite build --watch"
+	},
+	"devDependencies": {
+		"@digital-beaver-admin/eslint-config": "workspace:*",
+		"@vitejs/plugin-vue": "^5.2.1",
+		"autoprefixer": "^10.4.20",
+		"eslint": "^9.0.0",
+		"tailwindcss": "^3.4.17",
+		"tailwindcss-animate": "^1.0.7",
+		"vite": "^6.2.0",
+		"vite-plugin-dts": "^4.5.0"
+	},
+	"dependencies": {
+		"@tanstack/vue-table": "^8.21.2",
+		"@vueuse/core": "^12.7.0",
+		"clsx": "^2.1.1",
+		"lucide-vue-next": "^0.476.0",
+		"tailwind-merge": "^3.0.2",
+		"vue": "^3.5.13"
+	},
+	"peerDependencies": {
+		"@vueuse/core": "^12.7.0",
+		"lucide-vue-next": "^0.476.0",
+		"tailwindcss": "^3.4.17",
+		"vue": "^3.5.13"
+	}
 }
