--- a/apps/style-guide/package.json
+++ b/apps/style-guide/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "@digital-beaver-admin/style-guide",
-  "private": true,
-  "scripts": {
-    "dev": "histoire dev",
-    "build": "histoire build",
-    "preview": "histoire preview"
-  },
-  "devDependencies": {
-    "@histoire/plugin-vue": "1.0.0-alpha.2",
-    "@vitejs/plugin-vue": "^5.2.1",
-    "histoire": "1.0.0-alpha.2",
-    "vite": "^6.2.0",
-    "vue": "^3.5.13"
-  },
-  "dependencies": {
-    "@digital-beaver-admin/admin-ui": "workspace:*"
-  }
+	"name": "@digital-beaver-admin/style-guide",
+	"private": true,
+	"scripts": {
+		"dev": "histoire dev",
+		"build": "histoire build",
+		"preview": "histoire preview"
+	},
+	"devDependencies": {
+		"@histoire/plugin-vue": "1.0.0-alpha.2",
+		"@vitejs/plugin-vue": "^5.2.1",
+		"histoire": "1.0.0-alpha.2",
+		"vite": "^6.2.0",
+		"vue": "^3.5.13"
+	},
+	"dependencies": {
+		"@digital-beaver-admin/admin-ui": "workspace:*",
+		"lucide-vue-next": "^0.476.0"
+	}
 }
