--- a/apps/style-guide/tsconfig.json
+++ b/apps/style-guide/tsconfig.json
@@ -1,12 +1,16 @@
 {
 	"extends": "../../tsconfig.json",
 	"compilerOptions": {
-		"outDir": "dist",
-		"baseUrl": ".",
-		"paths": {
-			"@/*": ["src/*"]
-		},
+		"target": "es2017",
+		"module": "esnext",
+		"lib": ["esnext"],
+		"moduleResolution": "node",
+		"esModuleInterop": true,
+		"strict": true,
+		"strictNullChecks": true,
+		"resolveJsonModule": true,
+		"jsx": "preserve",
 		"composite": true
 	},
-	"include": ["**/*.ts", "**/*.d.ts", "**/*.tsx", "**/*.vue"]
+	"include": ["env.d.ts", "src/**/*", "src/**/*.vue"]
 }
