--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "digital-beaver-admin",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev:style-guide": "pnpm --filter @digital-beaver-admin/style-guide dev",
-    "dev": "pnpm --filter @digital-beaver-admin/admin-ui dev",
-    "build": "pnpm --filter @digital-beaver-admin/admin-ui build",
-    "lint": "eslint ."
-  },
-  "devDependencies": {
-    "@digital-beaver-admin/eslint-config": "workspace:*",
-    "eslint": "^9.21.0",
-    "prettier": "^3.5.2",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.3"
-  }
+	"name": "digital-beaver-admin",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"dev:style-guide": "pnpm --filter @digital-beaver-admin/style-guide dev",
+		"dev": "pnpm --filter @digital-beaver-admin/admin-ui dev",
+		"build": "pnpm --filter @digital-beaver-admin/admin-ui build",
+		"lint": "eslint ."
+	},
+	"devDependencies": {
+		"@digital-beaver-admin/eslint-config": "workspace:*",
+		"eslint": "^9.21.0",
+		"prettier": "^3.5.2",
+		"prettier-plugin-tailwindcss": "^0.6.11",
+		"tailwindcss": "^3.4.17",
+		"typescript": "^5.7.3"
+	},
+	"packageManager": "pnpm@9.0.6+sha1.648f6014eb363abb36618f2ba59282a9eeb3e879"
 }
