--- a/packages/admin-ui/package.json
+++ b/packages/admin-ui/package.json
@@ -23,14 +23,17 @@
 		"eslint": "^9.0.0",
 		"tailwindcss": "^3.4.17",
 		"tailwindcss-animate": "^1.0.7",
+		"unplugin-vue-components": "^28.4.1",
 		"vite": "^6.2.0",
 		"vite-plugin-dts": "^4.5.0"
 	},
 	"dependencies": {
 		"@tanstack/vue-table": "^8.21.2",
 		"@vueuse/core": "^12.7.0",
+		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-vue-next": "^0.476.0",
+		"reka-ui": "^2.0.0",
 		"tailwind-merge": "^3.0.2",
 		"vue": "^3.5.13"
 	},
