--- a/packages/admin-ui/tsconfig.json
+++ b/packages/admin-ui/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"extends": "../../tsconfig.json",
 	"compilerOptions": {
+		"types": ["vite/client"],
 		"outDir": "dist",
 		"baseUrl": ".",
 		"paths": {
