--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,10 +8,8 @@
 
 		/* Bundler mode */
 		"moduleResolution": "bundler",
-		"allowImportingTsExtensions": true,
 		"resolveJsonModule": true,
 		"isolatedModules": true,
-		"noEmit": true,
 		"jsx": "preserve",
 
 		/* Linting */
@@ -28,7 +26,8 @@
 		"apps/**/*.ts",
 		"apps/**/*.d.ts",
 		"apps/**/*.tsx",
-		"apps/**/*.vue"
+		"apps/**/*.vue",
+		"node_modules/.vite/unplugin-vue-components.d.ts" // Fix for Vite
 	],
 	"references": [
 		{ "path": "./packages/admin-ui" },
