include icons in the ui

--- a/apps/style-guide/package.json
+++ b/apps/style-guide/package.json
@@ -14,7 +14,6 @@
 		"vue": "^3.5.13"
 	},
 	"dependencies": {
-		"@digital-beaver-admin/admin-ui": "workspace:*",
-		"lucide-vue-next": "^0.476.0"
+		"@digital-beaver-admin/admin-ui": "workspace:*"
 	}
 }
