--- a/packages/admin-ui/package.json
+++ b/packages/admin-ui/package.json
@@ -14,18 +14,33 @@
 	},
 	"scripts": {
 		"build": "vite build",
-		"dev": "vite build --watch"
+		"dev": "vite build --watch",
+		"storybook": "storybook dev -p 6007",
+		"build-storybook": "storybook build"
 	},
 	"devDependencies": {
+		"@chromatic-com/storybook": "^3.2.5",
 		"@digital-beaver-admin/eslint-config": "workspace:*",
+		"@storybook/addon-essentials": "^8.6.3",
+		"@storybook/addon-storysource": "^8.6.3",
+		"@storybook/blocks": "^8.6.3",
+		"@storybook/test": "^8.6.3",
+		"@storybook/vue3": "^8.6.3",
+		"@storybook/vue3-vite": "^8.6.3",
 		"@vitejs/plugin-vue": "^5.2.1",
+		"@vitest/browser": "^3.0.7",
+		"@vitest/coverage-v8": "^3.0.7",
 		"autoprefixer": "^10.4.20",
 		"eslint": "^9.0.0",
+		"eslint-plugin-storybook": "^0.11.3",
+		"storybook": "^8.6.3",
+		"storybook-dark-mode": "^4.0.2",
 		"tailwindcss": "^3.4.17",
 		"tailwindcss-animate": "^1.0.7",
 		"unplugin-vue-components": "^28.4.1",
 		"vite": "^6.2.0",
-		"vite-plugin-dts": "^4.5.0"
+		"vite-plugin-dts": "^4.5.0",
+		"vue-component-type-helpers": "^2.2.6"
 	},
 	"dependencies": {
 		"@tanstack/vue-table": "^8.21.2",
@@ -41,5 +56,10 @@
 		"@vueuse/core": "^12.7.0",
 		"tailwindcss": "^3.4.17",
 		"vue": "^3.5.13"
+	},
+	"eslintConfig": {
+		"extends": [
+			"plugin:storybook/recommended"
+		]
 	}
 }
